# wasifill-example

./: .gitignore  Cargo.toml  Justfile  README.md  config.yaml  wasi_snapshot_preview1.wasm
actor/: Cargo.toml  README.md  wasmcloud.toml
actor/src/: lib.rs
actor/wit/: deps.toml  messaging.wit  world.wit
messaging/: actor-world.wit  messaging.wit
multiplexer/: Cargo.toml
multiplexer/src/: lib.rs
multiplexer/wit/: deps.toml  multiplexer.wit
src/: lib.rs
wasifill-export/: Cargo.toml
wasifill-export/src/: lib.rs
wasifill-export/wit/: wasifill-export.wit
wasifill-export/wit/overrides/io/: streams.wit
wasifill-import/: Cargo.toml
wasifill-import/src/: lib.rs
wasifill-import/wit/: deps.toml  wasifill-import.wit
wit/: README.md  deps.toml  wasifill.wit
