[package]
name = "messaging-wit-test"
version = "0.1.0"
authors = [""]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "messaging_wit_test"

[dependencies]
cargo-component-bindings = { git = "https://github.com/thomastaylor312/cargo-component", branch = "feat/custom_derive_attr" }

[package.metadata.component.target]
world = "actor"
path = "../messaging"

[package.metadata.component]
adapter = "../wasi_snapshot_preview1.wasm"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
