[package]
name = "wasifill-example-import"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = "0.11"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
