[package]
name = "wasifill-example-import"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
cargo-component-bindings = { git = "https://github.com/thomastaylor312/cargo-component", branch = "feat/custom_derive_attr" }

[package.metadata.component.target]
world = "wasifill-import"
path = "./wit"

[package.metadata.component]
adapter = "../wasi_snapshot_preview1.wasm"

[package.metadata.component.target.dependencies]
"wasmcloud:messaging" = { path = "../messaging/" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
